More minor correction fixes #9

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -266,7 +266,7 @@ In particular, placing a joint prior distribution
 \end{equation}
 which does not privilege either component is more easily accomplished if $\mathbf{Q}$ and $\mathbf{I}$ have the same scale.
 Additionally, supposing one has a prior belief that the over-dispersion is primarily IID and $\mathbf{v}$ accounts for the majority of the dispersion, then it is not immediately obvious how to represent this belief, without inadvertently altering the prior distribution on the amount of overall variation.
-This highlights identifiability issues of the parameters $(\tau_v, \tau_w)$ resulting from them being non-orthogonal.
+This highlights identifiability issues of the parameters $(\tau_v, \tau_w)$ resulting from their non-orthogonality.
 
 Building on the models of @leroux2000estimation and @dean2001detecting which tackle this identifiability problem, but do not scale the spatially structured noise, @simpson2017penalising propose a reparameterisation $(\tau_v, \tau_w) \mapsto (\tau_u, \phi)$ of the BYM model.
 This is known as the BYM2 model and given by
