--- a/corrections/preamble.tex
+++ b/corrections/preamble.tex
@@ -36,3 +36,10 @@
 
 \usepackage{amsmath}
 \DeclareMathOperator*{\argmin}{arg\,min}
+
+\usepackage{tcolorbox}
+
+\newtcolorbox{examiner}{
+  colback=white, % Background color
+  colframe=gray!90
+}
