--- a/references.bib
+++ b/references.bib
@@ -3159,4 +3159,13 @@ URL = {https://doi.org/10.1214/12-SS102}
   publisher={Taylor \& Francis}
 }
 
-
+@article{cox1987parameter,
+  title={Parameter orthogonality and approximate conditional inference},
+  author={Cox, David Roxbee and Reid, Nancy},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={49},
+  number={1},
+  pages={1--18},
+  year={1987},
+  publisher={Wiley Online Library}
+}
