Additional reference on challenges with likelihood surface for kernel hyperparameters

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -331,7 +331,7 @@ I have updated the text to read:
 56: need citation for v being hard to estimate
 \end{examiner}
 
-Although I found references [@zhang2004inconsistent; @williams2006gaussian; @anderes2010consistent; @karvonen2023maximum] supporting difficulties estimating one or multiple hyperparameters for spatial models (including using the Matérn kernel) I did not find a reference to directly support $\nu$ being difficult to estimate.
+Although I found references [@warnes1987problems; @zhang2004inconsistent; @williams2006gaussian; @anderes2010consistent; @karvonen2023maximum] supporting difficulties estimating one or multiple hyperparameters for spatial models (including using the Matérn kernel) I did not find a reference to directly support $\nu$ being difficult to estimate.
 For example, @williams2006gaussian note that above $\nu = 7/2$ (i.e. quite smooth) then it's difficult to estimate $\nu$ from "finite noisy training samples".
 Hence I have updated the text to read:
 
