--- a/references.bib
+++ b/references.bib
@@ -3169,3 +3169,14 @@ URL = {https://doi.org/10.1214/12-SS102}
   year={1987},
   publisher={Wiley Online Library}
 }
+
+@article{warnes1987problems,
+  title={Problems with likelihood estimation of covariance functions of spatial Gaussian processes},
+  author={Warnes, Jeremy J and Ripley, Brian D},
+  journal={Biometrika},
+  volume={74},
+  number={3},
+  pages={640--642},
+  year={1987},
+  publisher={Oxford University Press}
+}
