Spell check corrections reply

--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -7,7 +7,7 @@ A concise introduction to the work is available via my thesis defense [slides](h
 The [corrections](https://athowes.github.io/thesis/correct.pdf) for this thesis are also available online.
 If you notice any typos or other issues with the work, feel free to open an [issue](https://github.com/athowes/thesis/issues) on GitHub, or submit a pull request.
 
-## Acknowledgments {-}
+## Acknowledgements {-}
 
 ```{r acknowledgments, child=here::here('front-and-back-matter/_acknowledgements.Rmd')}
 ```
