--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -302,7 +302,8 @@ I have altered the text to read:
 42. Why is unit variance correct?
 \end{examiner}
 
-Yes that's a good point, what I mean to say is that the singletons have unit variance in the "structure matrix" sense.
+Yes that's a good point.
+What I mean to say is that the singletons have unit variance in the "structure matrix" sense.
 I have corrected the text to read that $p(u_i) \sim \mathcal{N}(0, \tau_u^{-1})$.
 
 \begin{examiner}
@@ -311,7 +312,7 @@ I have corrected the text to read that $p(u_i) \sim \mathcal{N}(0, \tau_u^{-1})$
 
 I use this terminology to mean that the posteriors for $\tau_v$ and $\tau_w$ are likely to be correlated.
 See Figure C.8 and Figure C.9 in Appendix C for an example, showing that the BYM2 parameterisation overcomes this issue.
-This appears to be inline with use of the term by e.g. @cox1987parameter.
+This appears to be inline with use of the term by, say, @cox1987parameter.
 
 \begin{examiner}
 48. Is convolution the right term here?
@@ -331,13 +332,12 @@ I have updated the text to read:
 56: need citation for v being hard to estimate
 \end{examiner}
 
-Although I found references [@warnes1987problems; @zhang2004inconsistent; @williams2006gaussian; @anderes2010consistent; @karvonen2023maximum] supporting difficulties estimating one or multiple hyperparameters for spatial models (including using the Matérn kernel) I did not find a reference to directly support $\nu$ being difficult to estimate.
-For example, @williams2006gaussian note that above $\nu = 7/2$ (i.e. quite smooth) then it's difficult to estimate $\nu$ from "finite noisy training samples".
-Hence I have updated the text to read:
+Although I found references [@warnes1987problems; @zhang2004inconsistent; @williams2006gaussian; @anderes2010consistent; @karvonen2023maximum] supporting difficulties estimating one or multiple hyperparameters for spatial models (including using the Matérn kernel) I did not find a reference to directly support $\nu$ being difficult to estimate in all cases.
+(For example, I did find that @williams2006gaussian note that beyond $\nu = 7/2$ [i.e. quite smooth] then it's difficult to estimate $\nu$ from "finite noisy training samples".)
+My intuition is that the observations in Chapter 4 being from a binomial distribution would further the case that $\nu$ would be difficult to estimate, even for $\nu < 7/2$.
+Even so, I have reduced the authority of this claim to read:
 
 > We fixed the smoothness hyperparameter $\nu$ to $3/2$ to avoid concerns regarding the joint identifiability of the smoothness and lengthscale hyperparameters.
-
-My intuition is that the observations in Chapter 4 being from a binomial distribution further supports that $\nu$ would be difficult to estimate.
 
 \begin{examiner}
 56: have Li vary with size?
@@ -370,7 +370,7 @@ As an example, for Figure 4.7 the caption now reads:
 
 > The mean CRPS in estimating $\rho_i$ and its standard error for each inferential model and simulation model on the grid geometry  (Panel 4.6E). The mean value averages over both areas and simulation runs.
 
-\begin{examiner}5
+\begin{examiner}
 9: Explain that mean CRPS is mean over the simulations.
 \end{examiner}
 
@@ -383,8 +383,7 @@ I have added the sentence:
 63: Table 4.4 has no standard errors.
 \end{examiner}
 
-<!-- Not yet resolved. -->
-(Adding standard errors to Table 4.4. would cause it not to fit onto the page.)
+Standard errors were omitted from Table 4.4 due to space constraints.
 
 \begin{examiner}
 64: "resulted wide"
@@ -443,7 +442,7 @@ I have included an additional clause that the IRR is "used to calculate HIV inci
 Tables sometimes appear earlier than they should (e.g., 5.1 and 5.2).
 \end{examiner}
 
-Not yet resolved.
+I have altered the position of Tables 5.1 and 5.2 to appear later.
 
 \begin{examiner}
 77: Table 5.2: $\phi_{ik}$ should be $u_{ik}$.
