Note on CPO and IC differences

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -121,7 +121,10 @@ The distinct differences between the CPO and information criteria (IC) results (
 Getting the observation-specific values from INLA might help to better understand this.
 \end{examiner}
 
-I agree.
+* Note that I've found the pattern is reversed (i.e. normal and what you'd expect) fitting to a subset of countries
+* Will paste results of that analysis into here
+* Could indicate that the values presented for all countries are just a mistake
+* Pending a full refit to test that
 
 ### Chapter 6
 
