Include temporary printout of subset DIC, WAIC and CPO

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -123,6 +123,14 @@ Getting the observation-specific values from INLA might help to better understan
 
 * Note that I've found the pattern is reversed (i.e. normal and what you'd expect) fitting to a subset of countries
 * Will paste results of that analysis into here
+
+<!--   model      dic dic_se   waic waic_se   cpo cpo_se -->
+<!--   <chr>    <dbl>  <dbl>  <dbl>   <dbl> <dbl>  <dbl> -->
+<!-- 1 Model 1 40597.   191. 41763.    227. 2098.   22.6 -->
+<!-- 2 Model 2 40445.   192. 41592.    229. 2232.   22.8 -->
+<!-- 3 Model 3 40598.   191. 41763.    227. 2098.   22.6 -->
+<!-- 4 Model 4 40446.   192. 41592.    229. 2232.   22.8 -->
+
 * Could indicate that the values presented for all countries are just a mistake
 * Pending a full refit to test that
 
