--- a/references.bib
+++ b/references.bib
@@ -3180,3 +3180,15 @@ URL = {https://doi.org/10.1214/12-SS102}
   year={1987},
   publisher={Oxford University Press}
 }
+
+@article{chiuchiolo2023joint,
+  title={Joint posterior inference for latent Gaussian models with R-INLA},
+  author={Chiuchiolo, Cristian and van Niekerk, Janet and Rue, H{\aa}vard},
+  journal={Journal of Statistical Computation and Simulation},
+  volume={93},
+  number={5},
+  pages={723--752},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
